--- a/source/server/annotation/templates/project_tl_annotation.html
+++ b/source/server/annotation/templates/project_tl_annotation.html
@@ -56,13 +56,9 @@
         'text-indent': '0px'} : {}]"
         :id="i_chunk">
           <template v-if="chunk.type == 'label'">
-            <b-tooltip :label="labels_hash[chunk.obj.label].name" type="is-dark" animated>
-              ${chunk.text}
-            </b-tooltip>
+            <b-tooltip :label="labels_hash[chunk.obj.label].name" type="is-dark" animated>${chunk.text}</b-tooltip>
           </template>
-          <template v-else>
-            ${chunk.text}
-          </template>
+          <template v-else>${chunk.text}</template>
           <button 
           v-if="chunk.type == 'label'"
           @click="onDeleteLabel(chunk.obj.id, data.obj.id, i_chunk)"
