--- a/source/server/templates/base.html
+++ b/source/server/templates/base.html
@@ -24,6 +24,7 @@
   <script src="{% static 'js/ex/buefy.min.js' %}"></script>
   <script src="{% static 'js/ex/axios.min.js' %}"></script>
   <script src="{% static 'js/ex/vue-router.min.js' %}"></script>
+  <script src="{% static 'js/ex/vue-cookies.min.js' %}"></script>
 </head>
 <body>
 
@@ -41,11 +42,24 @@
       <b-navbar-item class="{% if request.resolver_match.url_name|slice:':7' == 'project' %}is-active{% endif %}" href="/">
         Projects
       </b-navbar-item>
+
+      <!-- !!! Переделать этот элемента -->
+      <b-navbar-item>
+        {% if user.is_authenticated %}
+          {{ user.get_username }}
+          <a href="{% url 'logout'%}?next={{request.path}}">Logout</a>
+        {% else %}
+          <a href="{% url 'login'%}?next={{request.path}}">Login</a>
+        {% endif %}
+        
+      </b-navbar-item>
+      <!--  -->
+
     </template>
   </b-navbar>
 
-    {% block content %}
-    {% endblock %}
+  {% block content %}
+  {% endblock %}
 
   <script type="text/javascript">
     new Vue({
