--- a/source/server/templates/index.html
+++ b/source/server/templates/index.html
@@ -3,43 +3,55 @@
 {% load static %}
 
 {% block content %}
-<section class="hero is-main-color">
-	<div class="hero-body">
-		<div class="container">
-			<p class="is-size-3 has-text-white">Shanno - проект подготовки текста для работы с нейронными сетями</p>
-			<p class="is-size-5 has-text-white">Позволяет сделать разметку на сущности (NER), импортировать и экспортировать результаты работы в формате collnu plus</p>
-		</div>
-	</div>
-</section>
 
-<section id="main-project-page" class="section">
-	<nav class="level">
-		<div class="level-left">
-			<div class="level-item">
-				<p class="title is-3">Проекты</p>
-			</div>
-		</div>
-		<div class="level-right">
-			<div class="level-item">
-				<a class="button is-link" href="/project_create/">Создать проект</a>
-			</div>
-		</div>
-	</nav>
-	<div class="project-list">
-		<a 
-		:href="'/projects/' + project.id + '/'" 
-		v-bind:key="project.id" 
-		v-for="project in projects" 
-		class="box-link">
-		<article class="project-card">
-			<p class="title is-4">${project.name}</p>
-			<p class="subtitle is-6">${project.description}</p>
-		</article>
-	</a>
-</div>
-</section>
+  {% if user.is_authenticated %}
+    <section class="hero is-main-color">
+      <div class="hero-body">
+        <div class="container">
+          <p class="is-size-3 has-text-white">Shanno - проект подготовки текста для работы с нейронными сетями</p>
+          <p class="is-size-5 has-text-white">Позволяет сделать разметку на сущности (NER), импортировать и экспортировать результаты работы в формате collnu plus</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="main-project-page" class="section">
+      <nav class="level">
+        <div class="level-left">
+          <div class="level-item">
+            <p class="title is-3">Проекты</p>
+          </div>
+        </div>
+        <div class="level-right">
+          <div class="level-item">
+            <a class="button is-link" href="/project_create/">Создать проект</a>
+          </div>
+        </div>
+      </nav>
+      <div class="project-list">
+        <a 
+        :href="'/projects/' + project.id + '/'" 
+        v-bind:key="project.id" 
+        v-for="project in projects" 
+        class="box-link">
+        <article class="project-card">
+          <p class="title is-4">${project.name}</p>
+          <p class="subtitle is-6">${project.description}</p>
+        </article>
+      </a>
+    </div>
+    </section>
+  {% else %}
+    <!-- !!! Править -->
+    Хммм нужно авторизироваться
+    <!--  -->
+  {% endif %}
+
 {% endblock %}
 
 {% block js-script %}
-  <script src="{% static 'js/index.js' %}"></script>
+  
+  {% if user.is_authenticated %}
+    <script src="{% static 'js/index.js' %}"></script>
+  {% endif %}
+
 {% endblock %}
