add login/logout button

--- a/source/server/static/css/style.css
+++ b/source/server/static/css/style.css
@@ -136,6 +136,10 @@ a.box-link:hover {
   line-height: 2.5em;
 }
 
+.user_name {
+  padding-right: 1em
+}
+
 .switch {
   cursor: pointer;
   display: inline-flex;
