--- a/source/server/templates/index.html
+++ b/source/server/templates/index.html
@@ -41,9 +41,17 @@
     </div>
     </section>
   {% else %}
-    <!-- !!! Править -->
-    Хммм нужно авторизироваться
-    <!--  -->
+    <section class="hero is-main-color">
+      <div class="hero-body">
+        <div class="container">
+          <p class="is-size-3 has-text-white">Shanno - проект подготовки текста для работы с нейронными сетями</p>
+          <p class="is-size-5 has-text-white">Позволяет сделать разметку на сущности (NER), импортировать и экспортировать результаты работы в формате collnu plus</p>
+        </div>
+      </div>
+    </section>
+    <section class="section">
+      <p class="title is-3 has-text-centered">Для управления проектами необходимо авторизоваться</p>
+    </section>
   {% endif %}
 
 {% endblock %}
