--- a/source/server/templates/base.html
+++ b/source/server/templates/base.html
@@ -42,19 +42,24 @@
       <b-navbar-item class="{% if request.resolver_match.url_name|slice:':7' == 'project' %}is-active{% endif %}" href="/">
         Projects
       </b-navbar-item>
-
-      <!-- !!! Переделать этот элемента -->
-      <b-navbar-item>
+    </template>
+    <template slot="end">
+      <b-navbar-item tag="div">
         {% if user.is_authenticated %}
-          {{ user.get_username }}
-          <a href="{% url 'logout'%}?next={{request.path}}">Logout</a>
+        <p class="user_name">{{ user.get_username }}</p>
+        <div class="buttons">
+          <a class="button is-danger is-inverted is-outlined" href="{% url 'logout'%}?next={{request.path}}">
+            <strong>Выход</strong>
+          </a>
+        </div>
         {% else %}
-          <a href="{% url 'login'%}?next={{request.path}}">Login</a>
-        {% endif %}
-        
+        <div class="buttons">
+          <a class="button is-success" href="{% url 'login'%}?next={{request.path}}">
+            <strong>Вход</strong>
+          </a>
+        </div>
+        {% endif %}        
       </b-navbar-item>
-      <!--  -->
-
     </template>
   </b-navbar>
 
