--- a/source/server/templates/registration/logged_out.html
+++ b/source/server/templates/registration/logged_out.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <p>Logged out!</p>  
-
-  <a href="{% url 'login'%}">Click here to login again.</a>
+  <div class="column">
+  <p class="title is-3 is-spaced has-text-centered">Выполнен выход</p>
+  <p class="subtitle is-5 has-text-centered"><a href="{% url 'login'%}">Нажмите, чтобы авторизоваться</a></p>
+  </div>
 {% endblock %}
