--- a/source/server/templates/registration/login.html
+++ b/source/server/templates/registration/login.html
@@ -7,8 +7,8 @@
 <section class="hero is-fullheight-with-navbar">
   <div class="hero-body">
     <div class="container">
-      <div class="columns is-vcentered">
-        <div class="column is-three-fifths is-offset-one-fifth">
+      <div class="columns is-centered">
+        <div class="column is-three-fifths">
           <div class="box">
             {% if next %}
               {% if user.is_authenticated %}
