--- a/source/server/annotation/templates/project_settings.html
+++ b/source/server/annotation/templates/project_settings.html
@@ -26,7 +26,7 @@
           <div class="column">
             <b-field label="Имя пользователя">
               <b-field>
-                <b-input v-model="new_permission.user"></b-input>
+                <b-input v-model="new_permission.username"></b-input>
               </b-field>
             </b-field>
           </div>
