fix up extra page height

--- a/source/server/annotation/templates/project_page.html
+++ b/source/server/annotation/templates/project_page.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 <section class="columns is-marginless">
-  <aside class="column is-2 hero is-fullheight is-main-color">
+  <aside class="column is-2 hero is-fullheight-with-navbar is-main-color">
     <div class="hero-head">
       <p class="menu-label is-size-6 has-text-white has-text-centered">
         {{ project.name }}
