some small changes

--- a/source/server/annotation/templates/project_settings.html
+++ b/source/server/annotation/templates/project_settings.html
@@ -107,7 +107,7 @@
             </div>
           </div>
         </nav>
-        <div class="columns" style="margin-bottom: 1rem" v-show="member === active_edit">
+        <div class="columns mb-1r" v-show="member === active_edit">
           <div class="column">
             <b-field label="Имя пользователя">
               <b-field>
@@ -147,7 +147,7 @@
             </div>
           </div>
         </div>
-        <div class="notification is-info" style="margin-bottom: 1rem" v-show="is_open_delete == index">
+        <div class="notification is-info mb-1r" v-show="is_open_delete == index">
           <p>Вы действительно хотите удалить участника?</p>
           <br>
           <div class="field is-grouped">
@@ -164,7 +164,7 @@
   </div>
   <hr>
   <div class="column">
-    <button class="button is-danger" style="margin-bottom: 1rem" @click="openProjectDelete()">Удалить проект</button>
+    <button class="button is-danger mb-1r" @click="openProjectDelete()">Удалить проект</button>
     <div class="container" v-show="is_open_project_delete">
       <h4 class="title is-spaced is-4">Удаление проекта</h4>
       <h6 class="subtitle is-6">Удалить проект <strong>{{ project.name }}</strong>?</h6>
