--- a/source/server/annotation/templates/project_tl_labels.html
+++ b/source/server/annotation/templates/project_tl_labels.html
@@ -130,7 +130,7 @@
             </div>
           </div>
         </nav>
-        <div class="columns" style="margin-bottom: 1rem" v-show="label === active_edit">
+        <div class="columns mb-1r" v-show="label === active_edit">
           <div class="column">
             <b-field label="Название метки">
               <b-field>
@@ -188,7 +188,7 @@
             </div>
           </div>
         </div>
-        <div class="notification is-info" style="margin-bottom: 1rem" v-show="is_open_delete == index">
+        <div class="notification is-info mb-1r" v-show="is_open_delete == index">
           <p>Вы действительно хотите удалить метку?</p>
           <br>
           <div class="field is-grouped">
