--- a/source/server/annotation/templates/project_settings.html
+++ b/source/server/annotation/templates/project_settings.html
@@ -175,7 +175,7 @@
     <br>
     <div class="field is-grouped">
       <p class="control">
-        <button class="button is-success is-inverted is-outlined is-small" @click="eleteProject({{project.id}})">Да</button>
+        <button class="button is-success is-inverted is-outlined is-small" @click="deleteProject({{project.id}})">Да</button>
       </p>
       <p class="control">
         <button class="button is-danger is-inverted is-outlined is-small" @click="closeProjectDelete()">Нет</button>
